--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="main-header">
             	<h1>Azamat Mukhamediya</h1>
             	<div class="main-line"></div>
-            	<p>Верстка на HTML и CSS <br>Разработка сайтов под ключ</p>
+            	<p>Верстка на HTML и CSS</p>
             </div>
         </div>
         <a class="main-down slow" href="#portfolio"><i class="icon-down"></i></a>
@@ -41,19 +41,19 @@
     		<div class="row">
     			<div class="col-md-4 col-lg-4">
     				<div class="porfolio-block">
-    					<img src="img/portfolio/1.jpg" alt="Работа №1">
+    					<img src="img/portfolio/1.png" alt="Работа №1">
     					<a data-toggle="modal" data-work='work-1' href="#work">Смотреть работу</a>
     				</div>
     			</div>
     			<div class="col-md-4 col-lg-4">
     				<div class="porfolio-block">
-    					<img src="img/portfolio/2.jpg" alt="Работа №2">
+    					<img src="img/portfolio/2.png" alt="Работа №2">
     					<a data-toggle="modal" data-work='work-2' href="#work">Смотреть работу</a>
     				</div>
     			</div>
     			<div class="col-md-4 col-lg-4">
     				<div class="porfolio-block">
-    					<img src="img/portfolio/3.jpg" alt="Работа №3">
+    					<img src="img/portfolio/3.png" alt="Работа №3">
     					<a data-toggle="modal" data-work='work-3' href="#work">Смотреть работу</a>
     				</div>
     			</div>
@@ -65,19 +65,18 @@
 				<div class="row">
 	    		<div class="col-md-3 col-lg-3">
 	    			<strong>Azamat Mukhamediya</strong>
-	    			<p>Разработка сайтов<br> под ключ</p>
+	    			<p>Разработка сайтов</p>
 	    		</div>
 	    		<div class="col-md-6 col-lg-6">
-	    			<strong>Подпишитесь</strong>
+	    			<strong>Связь со мной</strong>
 	    			<div class="social-links">
-	    				<a href="#"><i class="icon-vk"></i></a>
-	    				<a href="#"><i class="icon-instagram"></i></a>
-	    				<a href="#"><i class="icon-twitter"></i></a>
+	    				<a target="_blank" href="skype:paulmorphy07?chat"><i class="icon-skype"></i></a>
+	    				<a target="_blank" href="mailto:paulmorphy07@gmail.com"><i class="icon-google"></i></a>
 	    			</div>
 	    		</div>
 	    		<div class="col-md-3 col-lg-3">
 	    			<strong>Напишите мне</strong>
-	    			<a href="#" class="offer-btn">Заказать сайт</a>
+	    			<a target="_blank" href="mailto:paulmorphy07@gmail.com" class="offer-btn">Заказать сайт</a>
 	    		</div>
     		</div>
 			</div>
