--- a/work-2.html
+++ b/work-2.html
@@ -1,10 +1,10 @@
 				    <div class="row">
 			        <div class="col-lg-5">
-			        	<img src="img/portfolio/2.jpg" alt="Вторая работа">
+			        	<img src="img/portfolio/2.png" alt="Вторая работа">
 			        </div>
 			        <div class="col-lg-7">
-			        	<h4>Сайт для чего-то</h4>
-			        		<p>Описание сайта</p>
-			        	<a href="https://vk.me/a31k98" class="modal-btn">Заказать такой сайт</a>
+			        	<h4>Сайт для создание сайтов</h4>
+			        		<p>Landing Page, адаптивная верстка, сетка и меню bootstrap, slick слайдер, всплывающее окно popup, форма обратной связи</p>
+			        	<a href="https://paulmorphy07.000webhostapp.com/" target="_blank" class="modal-btn">Посмотреть сайт</a>
 			        </div>
 			      </div>
