--- a/work-1.html
+++ b/work-1.html
@@ -1,10 +1,10 @@
 				    <div class="row">
 			        <div class="col-lg-5">
-			        	<img src="img/portfolio/1.jpg" alt="Первая работа">
+			        	<img src="img/portfolio/1.png" alt="Первая работа">
 			        </div>
 			        <div class="col-lg-7">
-			        	<h4>Сайт для магазина</h4>
-			        		<p>Описание сайта</p>
-			        	<a href="https://vk.me/a31k98" class="modal-btn">Заказать такой сайт</a>
+			        	<h4>Сайт визитка</h4>
+			        		<p>Landing Page, адаптивная верстка, сетка bootstrap, шапка сайта с эффектом parallax, категории портфолио с анимацией, всплывающие окна popup, форма обратной связи </p>
+			        	<a href="https://ulan.000webhostapp.com/" target="_blank" class="modal-btn">Посмотреть сайт</a>
 			        </div>
 			      </div>
