--- a/work-3.html
+++ b/work-3.html
@@ -1,10 +1,10 @@
 				    <div class="row">
 			        <div class="col-lg-5">
-			        	<img src="img/portfolio/3.jpg" alt="Третья работа">
+			        	<img src="img/portfolio/3.png" alt="Третья работа">
 			        </div>
 			        <div class="col-lg-7">
-			        	<h4>Сайт для кафе</h4>
-			        		<p>Описание сайта</p>
-			        	<a href="https://vk.me/a31k98" class="modal-btn">Заказать такой сайт</a>
+			        	<h4>Сайт товаров</h4>
+			        		<p>Адаптивная верстка, сетка и меню bootstrap, всплывающие окна popup</p>
+			        	<a href="https://wezuha.ru/" target="_blank" class="modal-btn">Посмотреть сайт</a>
 			        </div>
 			      </div>
