--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
         <a class="main-down slow" href="#portfolio"><i class="icon-down"></i></a>
     </div>
+	  <!--
     <div class="portfolio" id="portfolio">
     	<div class="container">
     		<h2 class="section-header">Портфолио</h2>
@@ -59,7 +60,7 @@
     			</div>
     		</div>
     	</div>
-    </div>
+    </div> -->
     <div class="footer">
 			<div class="container">
 				<div class="row">
